--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Models/Variable/* filter=lfs diff=lfs merge=lfs -text
+Plant-Disease-Classification-CI-CD-Pipeline/Models/variable/variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
